linking all the pages

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                font-size: 18px;
           }
           #viewTables{
-               background: hsl(209, 61%, 48%);
+               background: #307dc5;
           }
           #reserve{
                background: #c53e3e;
