--- a/reserve.html
+++ b/reserve.html
@@ -116,8 +116,12 @@
                <br>
 
                <div class="button-container">
-                    <button id="reserve" class="Btns">View Tables</button>
-                    <button id="home" class="Btns">Home</button>
+                    <a href="/api/tables">
+                         <button id="reserve" class="Btns">View Tables</button>
+                    </a>
+                    <a href="/">
+                         <button id="home" class="Btns">Home</button>
+                    </a>
                </div>
           </div>
      </div>
