--- a/viewTable.html
+++ b/viewTable.html
@@ -86,8 +86,12 @@
                <br>
 
                <div class="button-container">
-                    <button id="reserve" class="Btns">Make Reservation</button>
-                    <button id="home" class="Btns">Home</button>
+                    <a href="/api/reservation">
+                         <button id="reserve" class="Btns">Make Reservation</button>
+                    </a>
+                    <a href="/">
+                         <button id="home" class="Btns">Home</button>
+                    </a>
                </div>
           </div>
      </div>
