--- a/viewTable.html
+++ b/viewTable.html
@@ -109,5 +109,15 @@
           <br>
 
      </div>
+
+     <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+     <script>
+          $.get("/api/tables2").then(data=>{
+               console.log(data);
+          });
+
+          // make dynamic html and populate it with data 
+     </script>
 </body>
 </html>
