--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
      <meta charset="UTF-8">
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,36 +9,42 @@
      <title>Hot Restaurant-Homepage</title>
 
      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
-     
+
      <style>
-          *{
+          * {
                margin: 0;
                padding: 0;
                box-sizing: border-box;
                font-family: 'Josefin Sans', sans-serif;
           }
-          .main{
+
+          .main {
                margin: auto;
                padding-top: 30px;
                width: 70vw;
                background: lightgray;
                border-radius: 3px;
           }
-          .content{
+
+          .content {
                width: 90%;
                margin: auto;
                padding-top: 10px;
                padding-bottom: 10px;
           }
-          h1.title, h2.message{
+
+          h1.title,
+          h2.message {
                text-align: center;
           }
-          .button-container{
+
+          .button-container {
                display: flex;
                justify-content: center;
                flex-wrap: wrap;
           }
-          .homeBtns{
+
+          .homeBtns {
                padding: 10px;
                border: none;
                border-radius: 5px;
@@ -46,17 +53,21 @@
                text-align: center;
                font-size: 18px;
           }
-          #viewTables{
+
+          #viewTables {
                background: #307dc5;
           }
-          #reserve{
+
+          #reserve {
                background: #c53e3e;
           }
-          #viewTables:hover{
+
+          #viewTables:hover {
                background: #1c4870;
                cursor: pointer;
           }
-          #reserve:hover{
+
+          #reserve:hover {
                background: #792626;
                cursor: pointer;
           }
@@ -67,12 +78,10 @@
 <body>
      <div class="main">
           <div class="content">
-               <h1 class="title">Hot Restaurant</h1>
+               <h1 class="title">Tokyo Sushi</h1>
                <hr>
-               <br>
 
-               <h2 class="message">SOME MESSAGE</h2>
-               <br>
+               <h2 class="message">Welcome to the Reservation Page</h2>
 
                <div class="button-container">
                     <a href="/api/tables">
@@ -86,4 +95,5 @@
           </div>
      </div>
 </body>
+
 </html>
